<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/categories">
        <menu>
            <item android:id="@+id/nav_animal"
                android:title="@string/animal" />

            <item android:id="@+id/nav_space"
                android:title="@string/space" />

            <item android:id="@+id/nav_business"
                android:title="@string/business" />

            <item android:id="@+id/nav_country"
                android:title="@string/country" />

            <item android:id="@+id/nav_healthy"
                android:title="@string/healthy" />

            <item android:id="@+id/nav_human"
                android:title="@string/human" />

            <item android:id="@+id/nav_nature"
                android:title="@string/nature" />

            <item android:id="@+id/nav_weather"
                android:title="@string/weather" />
        </menu>
    </item>
    <item android:title="@string/communicate">
        <menu>
            <item android:id="@+id/nav_about_us"
                android:title="@string/about_us"
                android:icon="@drawable/ic_about_us_24px"/>

            <item android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/ic_share_24px"/>
        </menu>
    </item>
</menu>